--- a/config.env
+++ b/config.env
@@ -1,15 +1,12 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "1811880323:AAHdyhVIPm2V41rkN59vgPHDjqGYJVh5-L0"                              # Require restart after changing it while bot running
+OWNER_ID = "1478357602"                               # Require restart after changing it while bot running
+TELEGRAM_API = "1543212"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "d47de4b25ddf79a08127b433de32dc84"                          # Require restart after changing it while bot running
 
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
-DATABASE_URL = ""                           # Require restart after changing it while bot running
+DATABASE_URL = "mongodb+srv://gtm:gtm@cluster0.z5zq1ff.mongodb.net/?retryWrites=true&w=majority"                           # Require restart after changing it while bot running
 DATABASE_NAME = ""                          # The database name which you want to use. Default is mltb
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
@@ -17,19 +14,19 @@ AUTHORIZED_CHATS = ""                       # Require restart after changing it 
 SUDO_USERS = ""                             # Require restart after changing it while bot running
 STATUS_LIMIT = "10"
 DEFAULT_UPLOAD = "gd"
-STATUS_UPDATE_INTERVAL = "10"
-AUTO_DELETE_MESSAGE_DURATION = "30"
+STATUS_UPDATE_INTERVAL = "05"
+AUTO_DELETE_MESSAGE_DURATION = "-1"
 UPTOBOX_TOKEN = ""
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = "False"
+INCOMPLETE_TASK_NOTIFIER = "True"
 YT_DLP_OPTIONS = ""
-USE_SERVICE_ACCOUNTS = "False"
+USE_SERVICE_ACCOUNTS = "True"
 
 # GDrive Tools
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = "False"
-STOP_DUPLICATE = "False"
-INDEX_URL = ""
+GDRIVE_ID = "CI7KC0YrbPzd24XhySb9lVZRCXdg-sRG"
+IS_TEAM_DRIVE = "True"
+STOP_DUPLICATE = "True"
+INDEX_URL = "https://red-violet-8263.thefile2linkrobot.workers.dev/0:"
 
 # USER TD
 SA_MAIL = ""
@@ -44,12 +41,12 @@ RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/GarouTheDevil/Atrocious_Mirror"
+UPSTREAM_BRANCH = "master"
 
 # Leech
 LEECH_SPLIT_SIZE = ""
-AS_DOCUMENT = "False"
+AS_DOCUMENT = "True"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 LEECH_FILENAME_PREFIX = ""
